syntax = "proto3";

package grpctest;

enum Position {
    ONE = 0;
    TWO = 1;
}

/**
 * The TestRunner service
 * It has several methods to test all the different scenarios.
 */
service TestRunner {
    /// Takes a request and returns a single response
    rpc UnaryMethod(TestRequest) returns (TestResponse) {}

    /// Takes a stream of requests
    rpc StreamRequestMethod(stream TestRequest) returns (TestResponse) {}
    rpc StreamResponseMethod(TestRequest) returns (stream TestResponse) {}
    rpc TestBidirectionalStream(stream TestRequest) returns (stream TestResponse) {}
}

message TestRequest {
    string name = 1; /// Name
}

message TestResponse {
    string message = 1;
    Position position = 2;
}
